<resources>
    <string name="app_name">PROFILE_ALPUERTO</string>
    <string name="submit">Submit</string>
    <string name="enter_address">Enter Address</string>
    <string name="address">Address</string>
    <string name="enter_age">Enter Age</string>
    <string name="nationality">Nationality</string>
    <string name="age">Age</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_nationality">Enter Nationality</string>
    <string name="name">Name</string>
    <string name="profile_maker">Profile Maker</string>

    <!--    -->
</resources>